# newsagency-classification

./: .gitignore  README.md  impresso-na-env.yml  pyproject.toml  requirements.txt  sample.txt  setup.py
annotation_settings/: annotation_planning_per_annotator.csv  annotation_planning_per_doc.csv
annotation_settings/inception_settings/: TypeSystem.xml  layer_imagelinks.json  tagset_newsagencies.json
data/annotated_data/: label_map.json
data/annotation/: annotated_IA_de_docIDs.txt  annotated_IA_fr_docIDs.txt  annotated_core_de_docIDs.txt  annotated_core_fr_docIDs.txt
data/sampling/: IA_sample_de.pkl  IA_sample_fr.pkl  core_sample_de.pkl  core_sample_fr.pkl
data/split/: discarded_de.txt  (+1 more)
inception/: TypeSystem.xml  annotation_planning_per_doc.csv  impresso_commons_selection.py
notebooks/: annotation_planning.ipynb  class_error_analysis.ipynb  data_exploration.ipynb  model_evaluations.ipynb  postprocessing_annotations.ipynb  prepare_inception.py  preprocessing.ipynb  sampling.ipynb  stats_training_corpus.ipynb
samples/: Belga50.csv  Belga50_uid.csv  dev_de.txt  dev_fr.txt  newsagency_dev.pkl  newsagency_dev.txt  newsagency_test.pkl  newsagency_test.txt  newsagency_train.pkl  newsagency_train.txt  test_de.txt  test_fr.txt  train-dev-test_de.csv  train-dev-test_fr.csv  train_de.txt  train_fr.txt
tests/: na_tagger_in.jsonl  na_tagger_out.json
text-classification/: README.md  dataset.py  main.py
text-classification-baseline/: .gitignore  README.md  config.yml  dataset copy.py  dataset.py  main.py  model.py  run.sh  run_multilingual.sh  utils.py
(+4190 files in other folders)
