[tool.poetry]
name = "lib"
version = "1.0.0"
description = ""
authors = ["Lea Marxen <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apex = "*"
dask = "*"
datasets = "*"
dkpro_cassis = "*"
docopt = "*"
ipdb = "*"
numpy = "*"
nltk = "*"
pandas = "*"
pycaprio = "*"
pysbd = "*"
PyYAML = "*"
requests = "*"
scikit_learn = "*"
seqeval = "*"
setuptools = "*"
smart_open = "*"
StringDist = "*"
tensorboardX = "*"
torch = "*"
tqdm = "*"
transformers = "*"
ts = "*"

[tool.poetry.scripts]
use-model = 'lib.main:main'  # An example entry point

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
